# cmdemo

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: gradle.yml
100threads/: build.gradle
100threads/src/main/: AndroidManifest.xml
100threads/src/main/res/layout/: activity_main.xml
100threads/src/main/res/values/: strings.xml
animationdemo/: build.gradle
animationdemo/src/main/: AndroidManifest.xml
animationdemo/src/main/res/drawable/: circle.xml
animationdemo/src/main/res/layout/: activity_demo.xml  activity_demo2.xml  activity_main.xml
animationdemo/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello.c  op.c  op.h  op_main.c
app/src/main/res/drawable/: border.xml
app/src/main/res/layout/: activity_bitmap_decode_perf.xml  activity_blur_ui.xml  activity_cl_animation.xml  activity_cl_animation2.xml  activity_cl_animation2_init.xml  activity_cl_animation_simple.xml  activity_cm_view.xml  activity_data_binding_adapter.xml  activity_data_binding_demo.xml  activity_data_binding_demo2.xml  activity_dialog_will_crash.xml  activity_foreground_monitor.xml  activity_load_so.xml  activity_main.xml  activity_touch_delegate.xml  content_main.xml  dialog_will_crash.xml  list_item_blur_ui.xml  list_item_cl_animation_parallax.xml  (+1 more)
gpuprofilerdemo/: README.md  build.gradle
gpuprofilerdemo/src/main/: AndroidManifest.xml
roomdemo/: build.gradle
roomdemo/src/main/: AndroidManifest.xml
x5demo/: build.gradle
x5demo/src/main/: AndroidManifest.xml
(+129 files in other folders)
